# deriv

./: .gitignore  pyproject.toml
.github/workflows/: checks.yml  tests.yml
deriv/: __init__.py
tests/: test_deriv.py
