[project]
name = "deriv"
version = "0.0.1"
description = "Simple symbolic differentiation package"
authors = [
    {name = "Konstantin Templin", email = "1qnbhd@gmail.com"}
]
maintainers = [
    {name = "Konstantin Templin", email = "1qnbhd@gmail.com"}
]
urls = {Repository = "https://github.com/qnbhd/deriv"}
readme = "README.md"
keywords = ["math"]
license = {text = "MIT"}
requires-python = ">=3.10"
classifiers = [
        "Intended Audience :: Developers",
        "Programming Language :: Python :: 3",
        "Programming Language :: Python :: 3.6",
        "Programming Language :: Python :: 3.7",
        "Programming Language :: Python :: 3.8",
        "Programming Language :: Python :: 3.9",
        "Programming Language :: Python :: 3.10",
        "Programming Language :: Python :: 3 :: Only",
]

[build-system]
requires = [
    "setuptools>=45",
    "wheel"
]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
exclude = ["tests"]

[tool.black]
line-length = 120
target-version = ['py310']
exclude = '''
/(
  | \.git
  | \.mypy_cache
  | \.venv
  | dist
  | docs
)/
'''

[tool.isort]
profile = 'black'
src_paths = ['deriv', 'tests']
line_length = 120
lines_after_imports = 2
force_single_line = 'True'
force_sort_within_sections = 'True'
order_by_type = 'False'

[tool.ruff]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "C",  # flake8-comprehensions
    "B",  # flake8-bugbear
    "UP",  # pyupgrade
]

ignore = [
    "E501",  # line too long, handled by black
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
    "W191", # indentation contains tabs
]

[tool.ruff.pyupgrade]
# Preserve types, even if a file imports `from __future__ import annotations`.
keep-runtime-typing = true

[tool.pytest.ini_options]
log_cli = true
log_cli_level = "DEBUG"
log_cli_format = "%(asctime)s [%(levelname)8s] %(message)s (%(filename)s:%(lineno)s)"
log_cli_date_format = "%Y-%m-%d %H:%M:%S"
addopts = "--color=yes"

[tool.pydocstyle]
inherit = false
ignore = 'D100,D104,D107,D202,D203,D212,D400,D401,D405,D406,D407,D415'
match = '.*\.py'
